# libbo

./: CMakeLists.txt  README.md
.github/workflows/: cmake_test.yml
gadget/: ctztb.cpp
include/: bo.hpp
include/bo/: bextr.hpp  bit_operation_256.hpp  bitreverse.hpp  clz.hpp  ctz.hpp  popcnt.hpp  prefetch.hpp  select.hpp  seltb.cpp  summary.hpp  swapnext.hpp
test/: CMakeLists.txt
test/src/: bextr_test.cpp  bitreverse_test.cpp  clz_test.cpp  ctz_test.cpp  popcnt_test.cpp  prefetch_test.cpp  select_test.cpp
